Refine workflow scope

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -3,9 +3,13 @@ run-name: terraform deploy
 
 on:
   push:
+    path:
+      - 'terraform/**'
     branches:
       master
   pull_request:
+    path:
+      - 'terraform/**'
   workflow_dispatch:
 
 permissions:
