--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -27,7 +27,7 @@ env:
   TF_VAR_cloudflare_zone_id: ${{ secrets.cloudflare_zone_id }}
 
 jobs:
-  terraform-deploy:
+  terraform:
     runs-on: ubuntu-latest
     steps:
 
