--- a/server/nginx/conf.d/illcow.istaroth.cc.conf
+++ b/server/nginx/conf.d/illcow.istaroth.cc.conf
@@ -1,6 +1,9 @@
 server {
-    listen 80;
+    listen 443 ssl;
     server_name illcow.istaroth.cc;
+
+    ssl_certificate /etc/cert/fullchain.pem;
+    ssl_certificate_key /etc/cert/istaroth.key;
 
     location / {
         proxy_pass http://10.0.0.4:8096;
@@ -9,4 +12,14 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
+}
+
+server {
+    if ($host = illcow.istaroth.cc) {
+        return 301 https://$host$request_uri;
+    }
+
+    listen 80;
+    server_name illcow.istaroth.cc;
+    return 404;
 }
