--- a/server/nginx/conf.d/istaroth.cc.conf
+++ b/server/nginx/conf.d/istaroth.cc.conf
@@ -1,9 +1,22 @@
 server {
-    listen 80;
+    listen 443 ssl;
     server_name istaroth.cc www.istaroth.cc;
+
+    ssl_certificate /etc/cert/fullchain.pem;
+    ssl_certificate_key /etc/cert/istaroth.key;
 
     location / {
         root   /usr/share/nginx/istaroth.cc;
         index  index.html index.html;
     }
+}
+
+server {
+    if ($host = istaroth.cc) {
+        return 301 https://$host$request_uri;
+    }
+
+    listen 80;
+    server_name istaroth.cc;
+    return 404;
 }
