--- a/server/nginx/conf.d/istaroth.org.conf
+++ b/server/nginx/conf.d/istaroth.org.conf
@@ -1,9 +1,22 @@
 server {
-    listen 80;
-    server_name istaroth.org;
+    listen 443 ssl;
+    server_name istaroth.org www.istaroth.org;
+
+    ssl_certificate /etc/cert/fullchain.pem;
+    ssl_certificate_key /etc/cert/istaroth.key;
 
     location / {
         root   /usr/share/nginx/istaroth.org;
         index  index.html index.html;
     }
+}
+
+server {
+    if ($host = istaroth.org) {
+        return 301 https://$host$request_uri;
+    }
+
+    listen 80;
+    server_name istaroth.org;
+    return 404;
 }
