--- a/server/nginx/conf.d/istaroth.cc.conf
+++ b/server/nginx/conf.d/istaroth.cc.conf
@@ -16,7 +16,11 @@ server {
         return 301 https://$host$request_uri;
     }
 
+    if ($host = www.istaroth.cc) {
+        return 301 https://$host$request_uri;
+    }
+
     listen 80;
-    server_name istaroth.cc;
+    server_name istaroth.cc www.istaroth.cc;
     return 404;
 }
