--- a/server/nginx/conf.d/istaroth.org.conf
+++ b/server/nginx/conf.d/istaroth.org.conf
@@ -16,7 +16,11 @@ server {
         return 301 https://$host$request_uri;
     }
 
+    if ($host = www.istaroth.org) {
+        return 301 https://$host$request_uri;
+    }
+
     listen 80;
-    server_name istaroth.org;
+    server_name istaroth.org www.istaroth.org;
     return 404;
 }
