--- a/server/nginx/conf.d/navi.istaroth.cc.conf
+++ b/server/nginx/conf.d/navi.istaroth.cc.conf
@@ -1,12 +1,12 @@
 server {
     listen 443 ssl;
-    server_name illcow.istaroth.cc;
+    server_name navi.istaroth.cc;
 
     ssl_certificate /etc/cert/fullchain.pem;
     ssl_certificate_key /etc/cert/istaroth.key;
 
     location / {
-        proxy_pass http://10.0.0.4:8096;
+        proxy_pass http://10.0.0.4:4533;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -15,11 +15,11 @@ server {
 }
 
 server {
-    if ($host = illcow.istaroth.cc) {
+    if ($host = navi.istaroth.cc) {
         return 301 https://$host$request_uri;
     }
 
     listen 80;
-    server_name illcow.istaroth.cc;
+    server_name navi.istaroth.cc;
     return 404;
 }
