--- a/server/cert/istaroth.org.conf
+++ b/server/cert/istaroth.org.conf
@@ -7,13 +7,11 @@ req_extensions = req_ext
 
 [dn]
 C = US
-CN = istaroth.cc
+CN = istaroth.org
 
 [req_ext]
 subjectAltName = @alt_names
 
 [alt_names]
-DNS.1 = istaroth.cc
-DNS.3 = *.istaroth.cc
-DNS.4 = istaroth.org
-DNS.5 = www.istaroth.org
+DNS.1 = istaroth.org
+DNS.2 = *.istaroth.org
