--- a/server/nginx/conf.d/istaroth.cc.conf
+++ b/server/nginx/conf.d/istaroth.cc.conf
@@ -2,8 +2,8 @@ server {
     listen 443 ssl;
     server_name istaroth.cc www.istaroth.cc;
 
-    ssl_certificate /etc/cert/fullchain.pem;
-    ssl_certificate_key /etc/cert/istaroth.key;
+    ssl_certificate /etc/cert/cc/fullchain.pem;
+    ssl_certificate_key /etc/cert/cc/istaroth.key;
 
     location / {
         root   /usr/share/nginx/istaroth.cc;
