--- a/server/nginx/conf.d/default.conf
+++ b/server/nginx/conf.d/default.conf
@@ -2,8 +2,8 @@ server {
     listen 443 ssl;
     server_name _;
 
-    ssl_certificate /etc/cert/fullchain.pem;
-    ssl_certificate_key /etc/cert/istaroth.key;
+    ssl_certificate /etc/cert/cc/fullchain.pem;
+    ssl_certificate_key /etc/cert/cc/istaroth.key;
 
     return 404;
 }
