--- a/server/nginx/conf.d/istaroth.org.conf
+++ b/server/nginx/conf.d/istaroth.org.conf
@@ -2,8 +2,8 @@ server {
     listen 443 ssl;
     server_name istaroth.org www.istaroth.org;
 
-    ssl_certificate /etc/cert/fullchain.pem;
-    ssl_certificate_key /etc/cert/istaroth.key;
+    ssl_certificate /etc/cert/org/fullchain.pem;
+    ssl_certificate_key /etc/cert/org/istaroth.key;
 
     location / {
         root   /usr/share/nginx/istaroth.org;
